--- a/about.html
+++ b/about.html
@@ -101,8 +101,238 @@
     <!-- Main Content -->
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <div class="col-lg-10 col-lg-offset-0 col-md-10 col-md-offset-1">
                 <h4>Coming Soon! </h4>
+                <table>
+<!--                    ROW 1-->
+                    <tr>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/team/imane.JPG" alt="Imane Ahmed" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <i><small><small><small>"Hakuna Matata! What a wonderful phrase</small></small></small></i>
+                                        <i><small><small><small>Hakuna Matata! Ain't no passing craze</small></small></small></i>
+                                        <i><small><small><small>It means no worries for the rest of your days</small></small></small></i>
+                                        <i><small><small><small>It's our problem-free philosophy</small></small></small></i>
+                                        <i><small><small><small>Hakuna Matata!"</small></small></small></i>
+                                        <p><small><small><small>- The Lion King</small></small></small></p>
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/team/jawdat.jpg" alt="Jawdat" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <p>B+</p>
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/team/dima.jpg" alt="Dima Hage" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <p><small><small><small>I love getting involved in a positive change and love helping others. Nothing makes me happier than seeing a person in need smile. One of my favorite quotes is: "We make a living by what we get, we make a life by what we give." </small></small></small></p>
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/team/tawfique.jpg" alt="Tawfique" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <p><center>Tawfique Ali</center></p>
+                                        <p><center>External Officer</center></p>
+<!--<p></p>These things are always awkward to write. Am I being too deep? Am I thinking too much about it? I just want a burrito.-->
+<!--</p>-->
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+<!--                    ROW 2-->
+                    <tr>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+<!--                    ROW 3-->
+                   <tr>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                                <div class="flipper">
+                                    <div class="front">
+                                        <img src="img/teampic.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- front content -->
+                                    </div>
+                                    <div class="back">
+                                        <img src="img/contact-bg.jpg" alt="Sarah Zankar" style="float:right;width:236px;height:236px;">
+                                        <!-- back content -->
+                                    </div>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                
+                </table>
 <!--
                 <table>
                     <tr>
